使用 Colab 创建而成

--- a/colabs/quick_start.ipynb
+++ b/colabs/quick_start.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/cai-ji886/study/blob/main/colabs/quick_start.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "_"
       },
       "source": [
@@ -186,12 +176,12 @@
         "dnase.metadata\n"
       ],
       "metadata": {
-        "id": "F_RlaoqyILmp",
-        "outputId": "c1ad5608-eeed-4897-8273-dd379c696f97",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 115
-        }
+          "height": 135
+        },
+        "id": "F_RlaoqyILmp",
+        "outputId": "c1ad5608-eeed-4897-8273-dd379c696f97"
       },
       "execution_count": 28,
       "outputs": [
@@ -361,12 +351,12 @@
         "atac.metadata"
       ],
       "metadata": {
-        "id": "1qlFE50YJ1hb",
-        "outputId": "1cadb446-c55b-46d1-e608-515e8cddbd88",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 115
-        }
+          "height": 135
+        },
+        "id": "1qlFE50YJ1hb",
+        "outputId": "1cadb446-c55b-46d1-e608-515e8cddbd88"
       },
       "execution_count": 29,
       "outputs": [
@@ -536,12 +526,12 @@
         "rna_seq.metadata"
       ],
       "metadata": {
-        "id": "-wXHZEkjJ3TR",
-        "outputId": "89d4a975-2056-4071-9937-5b3a86bf67b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 385
-        }
+        },
+        "id": "-wXHZEkjJ3TR",
+        "outputId": "89d4a975-2056-4071-9937-5b3a86bf67b6"
       },
       "execution_count": 30,
       "outputs": [
@@ -1137,7 +1127,7 @@
       "execution_count": 37,
       "metadata": {
         "colab": {
-          "height": 301,
+          "height": 221,
           "base_uri": "https://localhost:8080/"
         },
         "id": "MjJsLGnGkYVu",
@@ -1183,7 +1173,7 @@
       "execution_count": 38,
       "metadata": {
         "colab": {
-          "height": 277,
+          "height": 204,
           "base_uri": "https://localhost:8080/"
         },
         "id": "J8_0AvHbkYVu",
@@ -1240,14 +1230,14 @@
         "id": "ktZ0PqhQkYVu"
       },
       "source": [
-        "We can predict the effect of a variant on a specific output type and tissue by making predictions for the reference (REF) and alternative (ALT) allele sequences.\n",
+        "我们可以通过预测参考 (REF) 和替代 (ALT) 等位基因序列，来预测某个变异对特定输出类型和组织的影响。\n",
         "\n",
-        "We specify the variant by defining a `genome.Variant` object. The specific variant below is a known variant affecting gene expression in colon tissue:"
+        "我们通过定义一个 `genome.Variant` 对象来指定变异。下面的特定变异是一个已知的影响结肠组织中基因表达的变异："
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "YaxavVV_kYVu"
       },
@@ -1267,7 +1257,7 @@
         "id": "HE2_iU6akYVu"
       },
       "source": [
-        "Next, we define the interval over which to make the REF and ALT predictions. A quick way to get a `genome.Interval` from a `genome.Variant` is by calling `.reference_interval`, which we can resize to a model-compatible sequence length:"
+        "接下来，我们定义进行REF和ALT预测的区间。从`genome.Variant`获取`genome.Interval`的一个快捷方法是调用`.reference_interval`，我们可以将其调整为模型兼容的序列长度："
       ]
     },
     {
@@ -1287,7 +1277,7 @@
         "id": "Oupoz0bGkYVu"
       },
       "source": [
-        "We then use `predict_variant` to get the REF and ALT RNA-seq predictions in the interval for \"Colon - Transverse\" tissue (`UBERON:0001157`):"
+        "然后，我们使用`predict_variant`来获取“结肠 - 横结肠”组织（`UBERON:0001157`）的REF和ALT RNA-seq预测结果。"
       ]
     },
     {
@@ -1312,7 +1302,7 @@
         "id": "YzYgHwSAkYVu"
       },
       "source": [
-        "We can plot the predicted REF and ALT values as a single plot and zoom in on the affected gene to better visualise the variant's effect on gene expression:"
+        "我们可以将预测的REF和ALT值绘制成单个图表，并放大受影响的基因，以更好地可视化变异对基因表达的影响："
       ]
     },
     {
@@ -1367,7 +1357,7 @@
         "id": "dSz201LRkYVu"
       },
       "source": [
-        "We see that the ALT allele (base 'C' at position 36201698) is associated with both lower expression and an exon skipping event in the *APOL4* gene on the negative strand. Note that we can ignore the uppermost line plot which shows a very minimal predicted amount of expression on the positive DNA strand (check the y axis scales). It is possible to adjust the y axes limits, see [visualization basics](https://www.alphagenomedocs.com/visualization_library_basics.html#visualization-library-basics) and [library documentation](https://www.alphagenomedocs.com/api/visualization.html)."
+        "我们发现，ALT等位基因（位置36201698处的碱基'C'）与负链上*APOL4*基因的较低表达和外显子跳跃事件相关。请注意，我们可以忽略最上面的线图，因为它显示了正向DNA链上非常小的预测表达量（检查y轴刻度）。可以调整y轴的限制，\n"
       ]
     },
     {
@@ -1376,7 +1366,7 @@
         "id": "7s4bDxczkYVu"
       },
       "source": [
-        "## Scoring the effect of a genetic variant"
+        "## 对基因变异的影响进行评分"
       ]
     },
     {
@@ -1385,9 +1375,9 @@
         "id": "8fTtdkpM-Ycm"
       },
       "source": [
-        "Scoring the effect of a genetic variant involves making predictions for the REF and ALT sequences and aggregating the track signal. This is implemented in `score_variant`, which uses specific `variant_scorer` configs for aggregation.\n",
+        "对基因变异的影响进行评分涉及对 REF 和 ALT 序列进行预测，并聚合 track 信号。这在 `score_variant` 中实现，它使用特定的 `variant_scorer` 配置进行聚合。\n",
         "\n",
-        "We provide a set of recommended variant scoring configurations as a dictionary (`variant_scorers.RECOMMENDED_VARIANT_SCORERS`), covering all output types, which we have assessed for their performance at domain-specific tasks. See the [variant scoring documentation](https://www.alphagenomedocs.com/variant_scoring.html) for more information. Here is a quick demo:"
+        "我们提供了一组推荐的变异评分配置，以字典形式存在（`variant_scorers.RECOMMENDED_VARIANT_SCORERS`），涵盖所有输出类型，并且我们已经评估了它们在特定领域任务中的性能。"
       ]
     },
     {
@@ -1408,42 +1398,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ncUCGp0JkYVu"
-      },
-      "source": [
-        "The returned `variant_scores` is a list of length 1 because we only specified 1 scorer:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xI2aR0OtkYVu",
-        "outputId": "7f4e7e96-be45-4699-fbc0-a2ab63fc3956"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "1"
-            ]
-          },
-          "execution_count": 66,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "len(variant_scores)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Oow5vOLVkYVu"
       },
       "source": [
-        "The actual scores per variant are in `AnnData` format, which is a way of annotating data (the numerical scores) with additional information about the rows and columns."
+        "每个变体的实际得分采用 `AnnData` 格式，这是一种使用关于行和列的附加信息来注释数据（数值得分）的方式。"
       ]
     },
     {
@@ -1477,60 +1435,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2URPdQGtkYVu"
-      },
-      "source": [
-        "`AnnData` objects have the following components:"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ssPveqJvkYVu"
-      },
-      "source": [
-        "<a href=\"https://services.google.com/fh/files/misc/anndata.png\"><img src=\"https://services.google.com/fh/files/misc/anndata.png\" alt=\"anndata\" border=\"0\" height=500></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "X1u94SdOkYVu"
-      },
-      "source": [
-        "We have a variant effect score for each of the 37 genes in the interval and each of the 667 `RNA_SEQ` tracks:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "eyv_SHT_kYVu",
-        "outputId": "5e2153b0-4d59-45bd-c09e-57ac4f09c752"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(37, 667)"
-            ]
-          },
-          "execution_count": 68,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "variant_scores.X.shape"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "-3cT3a6FkYVu"
       },
       "source": [
-        "We can access information on the 37 genes using `.obs`. Here are just first 5 genes:"
+        "我们可以使用 `.obs` 访问有关这 37 个基因的信息。以下是前 5 个基因："
       ]
     },
     {
@@ -1846,9 +1754,9 @@
         "id": "p6mVhremkYVu"
       },
       "source": [
-        "Note that if you are using a variant scorer that is not gene-specific (i.e., a `variant_scorers.CenterMaskScorer`), then `variant_scores.X` would have shape `(1, 667)` and there will be no gene metadata available since there is no concept of genes in this scenario.\n",
+        "请注意，如果您使用的变异位点评分器不是基因特异性的（例如，`variant_scorers.CenterMaskScorer`），那么 `variant_scores.X` 的形状将为 `(1, 667)`，并且由于在这种情况下没有基因的概念，因此不会有基因元数据可用。\n",
         "\n",
-        "The description of each track is accessed using `.var` (this is the same dataframe as the output metadata, but is included alongside the variant scores for convenience):"
+        "每个 track 的描述都使用 `.var` 访问（这与输出元数据的 dataframe 相同，但为了方便起见，与变异位点评分一起包含）："
       ]
     },
     {
@@ -2311,7 +2219,7 @@
         "id": "rrbvEe4xkYVu"
       },
       "source": [
-        "Some handy additional metadata can be found in `.uns`:"
+        "一些方便的附加元数据可以在 `.uns` 中找到："
       ]
     },
     {
@@ -3300,8 +3208,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
