使用 Colab 创建而成

--- a/colabs/quick_start.ipynb
+++ b/colabs/quick_start.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/cai-ji886/study/blob/main/colabs/quick_start.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "_"
       },
       "source": [
@@ -140,7 +150,7 @@
     {
       "cell_type": "code",
       "source": [
-        "以下结果均以nonzero_mean作为预测得分"
+        "# 以下结果均以nonzero_mean作为预测得分"
       ],
       "metadata": {
         "id": "egl5ogVALfCK"
@@ -178,7 +188,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 135
+          "height": 115
         },
         "id": "F_RlaoqyILmp",
         "outputId": "c1ad5608-eeed-4897-8273-dd379c696f97"
@@ -353,7 +363,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 135
+          "height": 115
         },
         "id": "1qlFE50YJ1hb",
         "outputId": "1cadb446-c55b-46d1-e608-515e8cddbd88"
@@ -956,7 +966,7 @@
         "id": "6fLrfgyvkYVt"
       },
       "source": [
-        "我们可以将其调整为与模型兼容的长度："
+        "将其调整为与模型兼容的长度："
       ]
     },
     {
@@ -1127,7 +1137,7 @@
       "execution_count": 37,
       "metadata": {
         "colab": {
-          "height": 221,
+          "height": 301,
           "base_uri": "https://localhost:8080/"
         },
         "id": "MjJsLGnGkYVu",
@@ -1173,7 +1183,7 @@
       "execution_count": 38,
       "metadata": {
         "colab": {
-          "height": 204,
+          "height": 277,
           "base_uri": "https://localhost:8080/"
         },
         "id": "J8_0AvHbkYVu",
@@ -2252,9 +2262,8 @@
         "id": "B0WK-6IpkYVu"
       },
       "source": [
-        "We recommend interacting with variant scores by flattening `AnnData` objects using `tidy_scores`, which produces a dataframe with each row being a single score for each combination of (variant, gene, scorer, ontology). It optionally excludes stranded tracks which do not match the gene’s strand for gene-specific scorer.\n",
-        "\n",
-        "The `raw_score` column contains the same values as stored in `variant_scores.X`. The `quantile_score` column is the rank of the `raw_score` in the distribution of scores for a background set of common variants, represented as a quantile probability. This allows for direct comparison across variant scoring strategies that yield scores on different scales. See [FAQs](https://www.alphagenomedocs.com/faqs.html#what-is-the-difference-between-a-quantile-score-and-raw-score) for further details."
+        "我们建议通过`tidy_scores`函数将`AnnData`对象展平来处理变异评分，该函数会生成一个数据框，其中每行对应(变异位点, 基因, 评分器, 本体论)组合的单一评分。对于基因特异性评分器，该函数可选地排除与基因链方向不匹配的链状轨道。\n",
+        "`raw_score`列包含与`variant_scores.X`中存储的相同数值。`quantile_score`列表示`raw_score`在常见变异背景集评分分布中的排名，以分位数概率形式呈现。这使得不同评分策略生成的跨尺度评分可直接进行比较。"
       ]
     },
     {
@@ -2802,13 +2811,11 @@
         "id": "055sHwjykYVu"
       },
       "source": [
-        "## Highlighting important regions with *in silico* mutagenesis\n",
+        "## 通过*计算机模拟*诱变技术突出显示重要区域\n",
         "\n",
-        "To highlight which regions in a DNA sequence are functionally important for a final variant prediction, we can perform an **in silico mutagenesis** (ISM) analysis by scoring all possible single nucleotide variants in a specific interval.\n",
+        "为突出DNA序列中哪些区域对最终变异预测具有功能重要性，我们可通过对特定区间内所有可能的单核苷酸变异进行评分，实施**计算机模拟突变分析**（ISM）。\n",
         "\n",
-        "Here is a visual overview of this process:\n",
-        "\n",
-        "<a href=\"https://services.google.com/fh/files/misc/ism_green_v2.png\"><img src=\"https://services.google.com/fh/files/misc/ism_green_v2.png\" alt=\"ISM\" border=\"0\" height=500></a>\n"
+        "\n"
       ]
     },
     {
@@ -2819,7 +2826,7 @@
       "source": [
         "\n",
         "\n",
-        "We define an `ism_interval`, which is a relatively small region of DNA that we want to systematically mutate. We also define the `sequence_interval`, which is the contextual interval the model will use when making predictions for each variant.\n"
+        "我们定义了一个`ism_interval`，即我们希望系统性突变的DNA相对较小区域。同时定义了`sequence_interval`，该序列区间将作为模型对每个变异进行预测时的上下文参考区间。\n"
       ]
     },
     {
@@ -2844,7 +2851,7 @@
         "id": "d9LSDA0QkYVu"
       },
       "source": [
-        "Next, we define the scorer we want to use to score each of the ISM variants. Here, we use a center mask scorer on predicted `DNASE` values, which will score each variant's effect on DNA accessibility in the 500bp vicinity. See the [variant scoring documentation](https://www.alphagenomedocs.com/variant_scoring.html) for more information on variant scoring."
+        "接下来，我们将定义用于评估每个ISM变异体的评分器。在此，我们采用基于预测`DNASE`值的中心掩膜评分器，该评分器将评估每个变异体对500bp范围内DNA可及性的影响。有关变异体评分的更多信息，请参阅[变异体评分文档](https://www.alphagenomedocs.com/variant_scoring.html)。"
       ]
     },
     {
@@ -2868,9 +2875,9 @@
         "id": "UbQxCvutkYVu"
       },
       "source": [
-        "Finally, we can use `score_variants` (notice the plural s) to score all variants.\n",
+        "最后，我们可以使用 `score_variants`（注意复数形式）对所有变体进行评分。\n",
         "\n",
-        "Note that this operation is quite expensive. For speed reasons, we recommend using shorter input sequences for the contextual `sequence_interval` and narrower `ism_interval` regions to mutate if possible.\n"
+        "请注意此操作成本较高。出于速度考虑，建议尽可能使用较短的输入序列作为上下文 `sequence_interval`，并缩小变异区域 `ism_interval` 的范围。\n"
       ]
     },
     {
@@ -2923,77 +2930,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "r3iJ9E-ckYVu"
-      },
-      "source": [
-        "The length of the returned `variant_scores` is 768, since we scored 768 variants (256 positions * 3 alternative bases per position):"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "NrRgRYF1kYVu",
-        "outputId": "7babc03c-87f1-4d4f-a062-c6e715706cc5"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "768"
-            ]
-          },
-          "execution_count": 76,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "len(variant_scores)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_e2WoG6pkYVu"
-      },
-      "source": [
-        "Each variant has scores of shape `(1, 305)`, reflecting the fact that we are not using a gene-centric scorer and that there are 305 `DNASE` tracks:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "f-raKWmbkYVu",
-        "outputId": "229de7c0-9d10-403b-9b71-09a769e616a8"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(1, 305)"
-            ]
-          },
-          "execution_count": 77,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Index into first variant and first scorer.\n",
-        "variant_scores[0][0].X.shape"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "nyDoTBdAkYVu"
       },
       "source": [
-        "To understand which positions are most influential in the predictions, we can visualize these scores using a sequence logo. This requires summarizing the scores into a single scalar value per variant.\n",
+        "为了解哪些位点在预测中最具影响力，我们可以使用序列徽标可视化这些评分。这需要将评分汇总为每个变异体的单一标量值。\n",
         "\n",
-        "As an example, let's extract the DNASE score for just the K562 cell line, a widely used experimental model. Alternatively, you could average across multiple tissues to obtain a single scalar value."
+        "例如，我们提取仅针对K562细胞系（一种广泛使用的实验模型）的DNASE评分。或者，您也可以对多个组织取平均值以获得单一标量值。"
       ]
     },
     {
@@ -3019,44 +2961,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UYtOmG4xkYVu"
-      },
-      "source": [
-        "The shape of `ism_result` is `(256, 4`) since we have 1 score per position per each of the 4 DNA bases.\n",
-        "\n",
-        "Note that in this case, our call to `ism.ism_matrix()` had the argument `multiply_by_sequence` set to 'True', so the output array contains non-zero values only for the bases corresponding to the reference sequence.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ONduc-kwkYVv",
-        "outputId": "041e64bb-7281-4ede-d81e-fbd610a81f44"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(256, 4)"
-            ]
-          },
-          "execution_count": 79,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "ism_result.shape"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Wj0VMFwCkYVv"
       },
       "source": [
-        "Finally, we plot the contribution scores as a sequence logo:"
+        "\n",
+        "最终，我们可以绘制序列的分布"
       ]
     },
     {
@@ -3106,9 +3015,9 @@
         "id": "Qkuuj1p7kYVv"
       },
       "source": [
-        "This plot shows that the sequence between positions ~225 to ~240 has the strongest effect on predicted nearby DNAse in K562 cells.\n",
+        "该图显示，在K562细胞中，序列位置~225至~240之间的区域对预测的邻近DNA酶活性具有最强影响。\n",
         "\n",
-        "These contribution scores can be used to systematically discover motifs important for different modalities and cell types, find the transcription factors binding those motifs and map motif instances across the genome. Here are a few tools you can use to do this:\n",
+        "这些贡献评分可用于系统性发现对不同模态和细胞类型重要的基序，识别与这些基序结合的转录因子，并在基因组范围内定位基序实例。以下工具可用于实现此目的：\n",
         "- [tfmodisco-lite](https://github.com/jmschrei/tfmodisco-lite/)\n",
         "- [tangermeme](https://github.com/jmschrei/tangermeme)\n",
         "- [tomtom](https://meme-suite.org/meme/tools/tomtom)"
@@ -3120,7 +3029,7 @@
         "id": "j6Vum-X6ILaz"
       },
       "source": [
-        "## Making mouse predictions"
+        "## 对小鼠进行预测"
       ]
     },
     {
@@ -3129,9 +3038,9 @@
         "id": "r-E-kEitg6ru"
       },
       "source": [
-        "So far, this notebook has focused on predictions for human (`Organism.HOMO_SAPIENS`). To generate predictions for mouse, specify the organism as `Organism.MUS_MUSCULUS` instead. Please note that the supported ontology terms differ between species.\n",
+        "迄今为止，本笔记本专注于人类（`Organism.HOMO_SAPIENS`）的预测。若需生成小鼠预测结果，请将生物体指定为`Organism.MUS_MUSCULUS`。请注意，不同物种支持的本体术语存在差异。\n",
         "\n",
-        "The following example demonstrates how to call `predict_sequence` for mouse predictions:"
+        "以下示例演示如何调用`predict_sequence`进行小鼠预测："
       ]
     },
     {
@@ -3157,7 +3066,7 @@
         "id": "WwpupBP1hPgh"
       },
       "source": [
-        "And here is an example of calling `predict_interval` for a mouse genomic interval:"
+        "并且这里是小鼠基因组`predict_interval` 的例子"
       ]
     },
     {
@@ -3193,22 +3102,12 @@
         "\n",
         "output.rna_seq.values.shape"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-1isDYNjkYVv"
-      },
-      "source": [
-        "## Conclusion\n",
-        "\n",
-        "That's it for the quick start guide. To dive in further, check out our [other tutorials](https://www.alphagenomedocs.com/tutorials/index.html).\n"
-      ]
     }
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
