使用 Colab 创建而成

--- a/colabs/quick_start.ipynb
+++ b/colabs/quick_start.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "W28j15ApoK_D",
@@ -29,7 +29,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title Install AlphaGenome\n",
+        "# @title 安装模型\n",
         "\n",
         "# @markdown 运行以安装模型\n",
         "from IPython.display import clear_output\n",
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "KuLPy_awXaP_",
         "language": "python"
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "toBpbthy93gr",
         "language": "python"
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "U2Q-amDjkYVt",
         "outputId": "5e3d7abb-eed3-4f92-c882-8b2b1cde6ce7",
@@ -148,26 +148,24 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# 以下结果均以nonzero_mean作为预测得分"
+        "### 以下结果均以nonzero_mean作为预测得分"
       ],
       "metadata": {
-        "id": "egl5ogVALfCK"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "crwy75E0MVrR"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "pRv5MT9hkYVt"
       },
       "outputs": [],
       "source": [
         "output = dna_model.predict_sequence(\n",
-        "    sequence='GATTACA'.center(2048, 'N'),  # Pad to valid sequence length.\n",
+        "    sequence='GATTACA'.center(2048, 'N'),  # 填充至2048\n",
         "    requested_outputs=[dna_client.OutputType.DNASE,\n",
         "              dna_client.OutputType.ATAC,\n",
         "              dna_client.OutputType.RNA_SEQ],\n",
@@ -193,7 +191,7 @@
         "id": "F_RlaoqyILmp",
         "outputId": "c1ad5608-eeed-4897-8273-dd379c696f97"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +366,7 @@
         "id": "1qlFE50YJ1hb",
         "outputId": "1cadb446-c55b-46d1-e608-515e8cddbd88"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,7 +541,7 @@
         "id": "-wXHZEkjJ3TR",
         "outputId": "89d4a975-2056-4071-9937-5b3a86bf67b6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -901,14 +899,12 @@
         "id": "cZuGzeStkYVt"
       },
       "source": [
-        "\n",
-        "\n",
-        "我们首先加载一个包含基因和转录本位置的 GTF 文件，该文件由 GENCODE 注释"
+        "首先加载一个包含基因和转录本位置的 GTF 文件，该文件由 GENCODE 注释"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "1WE7BBh6klIA"
       },
@@ -935,7 +931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "pngLCscokYVt",
         "outputId": "0d11ca12-5ab2-40c8-d963-76244d93f5f0",
@@ -971,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "VV5k05MykYVt"
       },
@@ -991,7 +987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "3TdgcNRskYVt",
         "outputId": "1eac2254-4c6f-4213-cf46-6428305c485e",
@@ -1058,7 +1054,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "ME7NH0B-kYVu",
         "outputId": "730339bb-17de-42e7-d174-8c57ba2fae9a",
@@ -1101,7 +1097,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "zU61GXrekYVu",
         "outputId": "70462dce-0d8b-4d1d-a079-b78fe2863a53",
@@ -1129,12 +1125,12 @@
         "id": "9hUwvkl_kYVu"
       },
       "source": [
-        "我们还提供了一个[可视化基础指南](https://www.alphagenomedocs.com/visualization_library_basics.html)，它可以与`TrackData`以及模型API返回的其他对象完美集成。"
+        "模型还提供了一个可视化基础指南"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "height": 301,
@@ -1180,7 +1176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "height": 277,
@@ -1247,7 +1243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "YaxavVV_kYVu"
       },
@@ -1764,9 +1760,7 @@
         "id": "p6mVhremkYVu"
       },
       "source": [
-        "请注意，如果您使用的变异位点评分器不是基因特异性的（例如，`variant_scorers.CenterMaskScorer`），那么 `variant_scores.X` 的形状将为 `(1, 667)`，并且由于在这种情况下没有基因的概念，因此不会有基因元数据可用。\n",
-        "\n",
-        "每个 track 的描述都使用 `.var` 访问（这与输出元数据的 dataframe 相同，但为了方便起见，与变异位点评分一起包含）："
+        "每个 track 的描述都使用 `.var` 访问，变异评分为最后的nonzero_mean"
       ]
     },
     {
@@ -2229,7 +2223,7 @@
         "id": "rrbvEe4xkYVu"
       },
       "source": [
-        "一些方便的附加元数据可以在 `.uns` 中找到："
+        "一些方便的附加元数据可以在 `.uns` 中找到，例如基因组位置，变异位点和变异评分器"
       ]
     },
     {
